# async_api

./: .gitignore  README.md
fastapi-solutions/: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  nginx.conf  pyproject.toml
fastapi-solutions/src/: main.py
fastapi-solutions/src/api/v1/: films.py  genres.py  persons.py
fastapi-solutions/src/core/: config.py  logger.py
fastapi-solutions/src/db/: cache.py  elastic.py
fastapi-solutions/src/models/: film.py  genre.py  model_config.py  person.py
fastapi-solutions/src/services/: film.py  genre.py  person.py
fastapi-solutions/src/utils/: pagination.py
tests/functional/: .env_test_example  Dockerfile  README.md  commands.sh  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  settings.py
tests/functional/src/: test_film.py  test_genre.py  test_persons.py  test_search.py
tests/functional/src/test_film/: test_film.py  test_search_film.py
tests/functional/src/test_person/: test_search_person.py
tests/functional/testdata/: mapping.py
tests/functional/testdata/films/: all_films.py  film_full_info_data.py  film_search_data.py  films_similar_data.py  full_data_film.py
tests/functional/testdata/genres/: genres_data.py
tests/functional/testdata/persons/: search_data.py
tests/functional/utils/: wait_for_es.py  wait_for_redis.py
