[tool.poetry]
name = "fastapi-solutions"
version = "0.1.0"
description = ""
authors = ["Python Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
redis = "^5.0.4"
elasticsearch = {extras = ["async"], version = "^8.13.1"}
orjson = "^3.10.3"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
uvloop = {version = "^0.19.0", markers = "platform_python_implementation == 'CPython'"}
gunicorn = "^22.0.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
